welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:3: error: ';' expected but 'else' found.
else return ((cigars > 39)&&(cigars<61))} 
^cigarParty:4: error: Unmatched closing brace '}' ignored here
 }
 ^